--- a/src/style.css
+++ b/src/style.css
@@ -40,10 +40,12 @@ canvas {
 }
 
 #controls {
-  display: flex;
-  gap: 10px;
-  align-items: center;
-  width: 100%;
+display: flex;
+    gap: 10px;
+    align-items: start;
+    max-width: 100%;
+    flex-direction: column;
+    padding: 2rem;
 }
 
 #timeline {
